# AgentPlugins

./: AGENTS.md  CHANGELOG.md
.github/workflows/: build.yml  release.yml
mol3d/: BUILD_COMPLETE.md  Cargo.toml  DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE.zh-Hans.md  README.md  build-wasm.sh
mol3d/examples/langchain-chat-ui/: package.json
mol3d/examples/langchain-chat-ui/public/: index.html
mol3d/examples/langchain-chat-ui/src/: langchain.ts  server.ts
mol3d/src/: lib.rs
mol3d/ui/: index.html  package.json  server.ts  tsconfig.json
mol3d/ui/src/: database.ts  index.ts
